--- a/DevDotLog/index.html
+++ b/DevDotLog/index.html
@@ -1,4 +1,4 @@
-
+vv1 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -180,7 +180,7 @@
 
 			  <div class="col-sm-6 col-md-6">
 			    <div class="thumbnail">
-			      <img src="img/pandas.png" alt="...">
+			      <img src="img/NFS.png" alt="...">
 			      <div class="caption">
 			       <h3>Setting Up NFS</h3>
 			         <p>The publication goes over how to set up a remote file system using NFS.</p>
